<resources>
    <string name="app_name">Gallery</string>

    <string name="folder_output">PhotoGalleryApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="privacytext">If you want to hide some photos or videos and to prevent unauthorized access of personal photos set security lock.</string>

    <string name="rate_msg">Please take a moment to rate it and share your valuable feedback with us.</string>
    <string name="exit_msg">Are you sure you want to exit ?</string>
    <string name="error_internet">Please Check Your Internet …</string>
    <string name="terms" translatable="false"> Our {terms}Terms and Conditions{/terms} and {privacy}Privacy Policy{/privacy} have been recently updated. To continue using our app, please review and agree to our updated terms.</string>
    <string name="vpn_process_name" translatable="false">:vpn</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_favorite">Favourite</string>
    <string name="menu_recycle">Recycle bin</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate for us</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="set_security">Set Security</string>
    <string name="security_question">Security Question</string>
    <string name="incorrect_answer">*Incorrect Answer!</string>
    <string name="select_security_question">Select Security Question</string>
    <string name="enter_security_answer">Enter Security Answer</string>
    <string name="submit">Submit</string>
    <string name="add_to_album">Add to album</string>
    <string name="new_album">New album</string>
    <string name="edit_image">Edit Image</string>
    <string name="crop">Crop</string>
    <string name="adjust">Adjust</string>
    <string name="filter">Filter</string>
    <string name="text">Text</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="sharpen">Sharpen</string>
    <string name="add_text">Add Text</string>
    <string name="font">Font</string>
    <string name="color">Color</string>
    <string name="background">Background</string>
    <string name="shadow">Shadow</string>
    <string name="set_password">Set Password</string>
    <string name="no_images_found">No images found</string>
    <string name="please_enter_password">Please Enter password</string>
    <string name="confirm_password_does_not_match">*Confirm Password does not match!</string>
    <string name="forgot_password">Forgot password</string>
    <string name="save_amp_share"><![CDATA[Save & Share]]></string>
    <string name="share_to">Share to</string>
    <string name="photos_main">Photos</string>
    <string name="photos">Photos</string>
    <string name="albums">Albums</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="videos">Videos</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="no_trash_found">No trash found!</string>
    <string name="restore">Restore</string>
    <string name="details">Details</string>
    <string name="name">Name :</string>
    <string name="time">Time :</string>
    <string name="size">Size :</string>
    <string name="height">Height :</string>
    <string name="width">Width :</string>
    <string name="path">Path :</string>
    <string name="slideshow">SlideShow</string>
    <string name="hidden_images">Hidden Images</string>
    <string name="images">Images</string>
    <string name="edit">Edit</string>
    <string name="_3_files_copy_to_new_album">3 Files copy to new Album.</string>
    <string name="delete_items_from_original_album">Delete items from original album</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_sheet">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete_sheet">Delete ?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="exit_app">Exit app ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="gallery_images_are_loading_so_nplease_wait">Gallery Images are Loading So\nPlease Wait...</string>
    <string name="loading">Loading...</string>
    <string name="ad_loading">Ad Loading</string>
    <string name="retry">RETRY</string>
    <string name="no_internet_connection">No Internet Connection !</string>
    <string name="error_internet_2">You don\'t seem to be connected to internet. Please check your internet connection and try again!</string>
    <string name="loading_please_wait">Loading Please Wait</string>
    <string name="exit">EXIT</string>
    <string name="rate_us">RATE US</string>
    <string name="rate_for_us">Rate For Us</string>
    <string name="thank_msg">Thanks for leaving a nice review, It helps us a lot</string>
    <string name="new_file_name">New File Name</string>
    <string name="file_name_here">File Name here</string>
    <string name="saving_please_wait">Saving Please Wait</string>
    <string name="more_albums">More Albums</string>
    <string name="sort_by">Sort by</string>
    <string name="favourite">Favourite</string>
    <string name="rotate">Rotate</string>
    <string name="rename">Rename</string>
    <string name="set_as">Set as</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_180_xb0">Rotate 180°</string>
    <string name="select_your_question">Select your question</string>
    <string name="what_s_your_father_s_name">What\'s your father\'s name?</string>
    <string name="what_s_your_mother_s_name">What\'s your mother\'s name</string>
    <string name="what_s_your_favourite_movie">What\'s your favourite movie?</string>
    <string name="what_s_your_pets_name">What\'s your pets name?</string>
    <string name="what_s_your_dream_job">What\'s your dream job?</string>
    <string name="in_which_city_did_your_parents_meet">In which city did your parents meet?</string>
    <string name="count">Count</string>
    <string name="date">Date</string>
    <string name="reverse_all">Reverse all</string>
    <string name="reset">Reset</string>


    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="delete_in_progress">Delete in Progress</string>
    <string name="album_name_here">Album Name here</string>
    <string name="restored_sucessfully">Restored Successfully</string>
    <string name="items">" items"</string>
    <string name="copied">"Copied "</string>
    <string name="restored">"Restored "</string>
    <string name="deleted">"Deleted "</string>
    <string name="items_deleted">" items deleted."</string>
    <string name="added_favorite">Added to favourite Successfully</string>
    <string name="removed_favorite">Removed from favourite Successfully</string>
    <string name="unhided_from_privacy">Unhided from privacy Successfully</string>
    <string name="hided_to_privacy">Hided to privacy Successfully</string>
    <string name="unhided">"Unhided "</string>
    <string name="select_question">Please select valid question.</string>
    <string name="answer_not_empty">Answer should not be empty.</string>
    <string name="select_valid_question">Please select valid question.</string>
    <string name="enter_some_text">Please Enter Some Text</string>
    <string name="grant_camera_permission">Please grant camera permission to take picture</string>
    <string name="select_photos_to_delete">Please select photos to delete</string>
    <string name="select_photo_to_restore">Please select photos to restore</string>
    <string name="select_photos">Please select photos</string>
    <string name="select_albums">Please select Albums</string>
    <string name="enter_file_name">Please enter File name</string>
    <string name="select_image_to_unhide">Please select images to unhide</string>
    <string name="enter_album_name">Please enter album name</string>
    <string name="album_exists">Album already exists</string>
    <string name="file_exixts">File already exists</string>
    <string name="something_went_wrong">Something went Wrong...!!</string>
    <string name="not_installed">" is not Installed."</string>
    <string name="forgot_pass"><![CDATA[<u>Forgot Password</u>]]></string>
    <string name="files_copy_to">" files copy to "</string>
    <string name="enter_password">Enter Password</string>
    <string name="selected">" Selected"</string>
    <string name="confirm_password">Please Confirm Password</string>
    <string name="password_not_matcg">Password does not match!</string>
    <string name="sure_delete">Are you sure to delete this file?</string>
    <string name="restore_progress">Restore in Progress</string>
    <string name="task_progress">Task in Progress</string>
    <string name="hide_progress">Hide in Progress</string>
    <string name="title_photos">Photos</string>
    <string name="title_albums">Albums</string>
    <string name="title_hidden">Hidden</string>


</resources>