<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_115sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_13sdp"
            android:paddingRight="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/sort_by"
                android:textColor="@color/textLight"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/name"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/count"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/date"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtReverseAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/reverse_all"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/reset"
                android:textColor="#636363"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>