<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_135sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_13sdp"
            android:paddingRight="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/rotate"
                android:textColor="@color/textLight"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txtRotateLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/rotate_left"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtRotateRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/rotate_right"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txFlip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/rotate_180_xb0"
                android:textColor="#636363"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>