<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_135sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_13sdp"
            android:paddingRight="@dimen/_20sdp">

            <TextView
                android:id="@+id/txtAddtoAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/add_to_album"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <RelativeLayout
                android:id="@+id/relRotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotate"
                    android:fontFamily="@font/font_regular"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="#636363"/>

                <ImageView
                    android:layout_width="@dimen/_9sdp"
                    android:layout_height="@dimen/_9sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_rotate"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/txtRename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/rename"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtSetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/set_as"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>