<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_145sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp">

            <TextView
                android:id="@+id/txtFavourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/favourite"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtAddtoAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/add_to_album"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/txtNewAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/new_album"
                android:textColor="#636363"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>